projects/compiler/test/typechecker/try/error_else_block_empty.out
Error at %FILE_NAME%:4:20
Incomplete try-else expression
  |    val x = try ok() else |e| {}
                        ^
The else-block must contain a value
