projects/compiler/test/typechecker/try/error_else_block_empty.abra
func ok(): Result<Int, String> = Ok(123)

func f1(): Result<Int, Int> {
  val x = try ok() else |e| {}

  Ok(x + 1)
}